# biomodals

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  PLAN.md  README.md  biomodals  pyproject.toml  run.sh
.agents/skills/biomodals-app-development/: SKILL.md
.agents/skills/biomodals-workflow-development/: SKILL.md
.codex/rules/: default.rules
biomodals/: cli.py  utils.py
biomodals/app/design/: af3score_app.py  boltzgen.py  boltzgen_app.py  hello.py  ligandmpnn_app.py  modal_boltzgen.py  ppiflow_0208.py  ppiflow_app.py  ppiflow_draft.py  protenixscore_app.py  rfdiffusion_app.py
biomodals/app/fold/: abcfold2.py  abcfold2_app.py
clients/fold/: abcfold2.py
docs/agents/: app-development.md  workflow-development.md
examples/app/: abnativ.sh  af3score.sh  antifold.sh  caliby.sh  flowpacker.sh  iggm.sh  ligandmpnn.sh  ppiflow_app.sh  rosetta.sh
scripts/fold/: abcfold2.py
src/biomodals/: cli.py
tests/app/: test_af3score_standalone_contract.py  test_alphafold3_standalone_contract.py  test_caliby_app.py  test_catalog_workflow_apps.py  test_cli_workflow_catalog.py  test_dockq_standalone_contract.py  test_flowpacker_workflow_contract.py  test_gromacs_standalone_contract.py  test_ligandmpnn_workflow_contract.py  test_rfdiffusion_workflow_contract.py  test_rosetta_standalone_contract.py
tests/helper/: test_volume_run.py
tests/schema/: test_workflow_schemas.py
tests/workflow/: test_artifacts.py  test_builder.py  test_ledger.py  test_nodes.py  test_orchestrator.py  test_orchestrator_app.py  test_ppiflow_v2.py  test_ppiflow_workflow.py  test_ppiflow_workflow_inputs.py  test_rfd_ligandmpnn_workflow.py  test_runtime.py  test_shortmd_workflow.py  test_workers.py
(+80 files in other folders)
