[project]
name = "biomodals"
version = "0.1.0"
description = "Run biomodelling tasks with Modal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "backports-strenum>=1.3.1,<2.0 ; python_full_version < '3.11'",
    "modal>=1.4.3",
    "niquests>=3.18.4",
    "orjson>=3.11.8",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "tqdm>=4.67.3",
    "typer>=0.20.0",
    "uniaf3>=0.2.0",
]

[project.scripts]
biomodals = "biomodals.cli:app"

[build-system]
requires = ["uv_build>=0.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
]

[tool.ruff]
extend-exclude = ["logs/*", "data/*"]
extend-include = ["*.ipynb"]
line-length = 88

[tool.ruff.format]
preview = true

[tool.ruff.lint]
extend-ignore = ["E501"]
select = [
    "D",
    "E",
    "F",
    "W",
    "I",
    "S",
    "UP",
    "B"
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
